--- a/2021/2021.md
+++ b/2021/2021.md
@@ -436,7 +436,7 @@ Under the same number of edges, as the number of thread increases, the trend of 
 
 ![30000e](./pic/20211211.jpg)
 
-50000:
+50000 edges:
 
 ![50000e](./pic/20211212.jpg)
 
