--- a/2022/2022.md
+++ b/2022/2022.md
@@ -1,5 +1,152 @@
 # 2022 Research Log
 
+## 2022/3/1
+
+Parallelized *for-loop* with Pthreads:
+
+//
+
+## 2022/2/28
+
+A own *for-loop* function:
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+template <typename F>
+void para_for(int start, F const &f) {
+    for (int i = start; f(i); ++i)
+        cout << i << endl;
+}
+
+int main(int argc, const char * argv[]) {
+    int max = 9;
+    auto cond = [&](int i) -> bool {
+        return i < max;
+    };
+    para_for(0, cond);
+    return 0;
+}
+```
+
+## 2022/2/27
+
+Pthreads:
+
+Basic usage:
+
+```c++
+#include <iostream>
+#include <thread>
+
+using namespace std;
+
+void thread_func(int n, int &num) {
+    cout << n << endl;
+    num = 9;
+}
+
+int main(int argc, const char * argv[]) {
+    int num = 0;
+    thread t0(thread_func, 0, ref(num));
+    t0.join();
+    cout << num << endl;
+    return 0;
+}
+```
+
+Using *for-loop* creating threads:
+
+```c++
+#include <iostream>
+#include <thread>
+#include <vector>
+
+using namespace std;
+
+void thread_func(int n, int &num) {
+    cout << n;
+    num = n;
+}
+
+int main(int argc, const char * argv[]) {
+    int num = 0;
+    vector<thread> threads;
+    for (int i = 0; i < 8; ++i)
+        threads.emplace_back(thread(thread_func, i, ref(num)));
+    for (thread &t : threads)
+        t.join();
+    cout << endl;
+    cout << num << endl;
+    return 0;
+}
+```
+
+Lambda:
+
+Using lambda expressions as parameters:
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+template <typename F>
+void test_lambda(F const &f) {
+    if (f())
+        cout << "True" << endl;
+    else
+        cout << "False" << endl;
+}
+
+int main(int argc, const char * argv[]) {
+    int num = 9;
+    auto lambda = [&]() -> bool {return num < 9;};
+    test_lambda(lambda);
+    return 0;
+}
+```
+
+## 2022/2/25
+
+OCaml:
+
+//
+
+Homework:
+
+```ocaml
+let rec union a b =
+	match (a, b) with
+	| ([], b) -> b
+	| (a, []) -> a
+	| (ha::ta, hb::tb) ->
+		if ha < hb then ha::(union ta b)
+		else if ha > hb then hb::(union a tb)
+		else ha::(union ta tb);;
+```
+
+```ocaml
+let rec reverse ls = rev ls []
+and rev ls r = match ls with
+	| [] -> r
+	| h::t -> rev t (h::r);;
+```
+
+## 2022/2/23
+
+Parallelization of delta-stepping algorithm:
+
+If there are `m` threads and the loop will be done `n` times:
+
+1. Thread No. 1 will deal with loop 1, 1 + m, 1 + 2m...
+2. Thread No. 2 will deal with loop 2, 2 + m, 2 + 2m...
+3. Thread No. `x` will deal with loop x, x + m, x + 2m...
+
+![Parallelization of delta-stepping algorithm](./pic/2022022301.jpeg)
+
 ## 2022/2/20
 
 Pthreads:
